# IA_MonteCarlo_JeudHex

code source/: Arene_light  CMakeLists.txt  ReadMe.txt  arbitre.cc  arbitre.hh  jeu.cc  jeu.hh  main.cc
code source/assets/: CMakeLists.txt  fileManager.cc  fileManager.hh  learner.cc  learner.hh  learningNode.cc  learningNode.hh  playingNode.cc  playingNode.hh
code source/assets/intelligence/: Intelligence1_0.txt  Intelligence2_0.txt
code source/joueurs/: CMakeLists.txt  joueur.cc  joueur.hh  joueur_alphabeta.cc  joueur_alphabeta.hh  joueur_lesPetitsDiables.cc  joueur_lesPetitsDiables.hh  joueur_manuel.cc  joueur_manuel.hh  joueur_montecarlo_.cc  joueur_montecarlo_.hh  joueur_random.cc  joueur_random.hh
